<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddSubsClassActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lesson_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/lesson_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/class_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/class_layout"
        app:layout_constraintEnd_toEndOf="@+id/lesson_layout"
        app:layout_constraintStart_toStartOf="@+id/lesson_layout"
        app:layout_constraintTop_toBottomOf="@+id/lesson_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subscribe_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/subscribe_layout"
        app:layout_constraintEnd_toEndOf="@+id/class_layout"
        app:layout_constraintStart_toStartOf="@+id/class_layout"
        app:layout_constraintTop_toBottomOf="@+id/class_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bonus_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bonus_layout"
        app:helperText="Opsional (Tidak wajib diisi / dapat dikosongkan)"
        app:layout_constraintEnd_toEndOf="@+id/subscribe_layout"
        app:layout_constraintStart_toStartOf="@+id/subscribe_layout"
        app:layout_constraintTop_toBottomOf="@+id/subscribe_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/btn_add_class"
        app:cornerRadius="@dimen/btn_corner"
        app:layout_constraintEnd_toEndOf="@+id/subscribe_layout"
        app:layout_constraintStart_toStartOf="@+id/subscribe_layout"
        app:layout_constraintTop_toBottomOf="@+id/bonus_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>