<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_lesson_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_very_big_size"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_very_big_size"
        android:hint="@string/input_lesson_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lesson_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:cornerRadius="@dimen/btn_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_lesson_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_lesson_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_upload"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:cornerRadius="@dimen/btn_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="@+id/layout_lesson_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_lesson_name"
        android:layout_marginRight="8dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_card_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/card_full_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="@+id/layout_lesson_name"
        app:layout_constraintStart_toStartOf="@+id/layout_lesson_name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/ic_image_200" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>